# desktopstation

./: .gitignore  CLAUDE.md  README.md
deskstation-daemon/: .env.example  .pre-commit-config.yaml  README.md  config.yaml.example  pyproject.toml
deskstation-daemon/docs/designs/: 02-screen-2-messages.html  05-overlay-pomodoro.html
deskstation-daemon/docs/plan/: 00-roadmap.md
deskstation-daemon/docs/spec/: 01-architecture.md  03-project-structure.md  04-pomodoro-engine.md
deskstation-daemon/src/deskstation/: __init__.py  __main__.py  auth_google.py  config.py  logging_setup.py  main.py  secrets.py  ui_state.py
deskstation-daemon/src/deskstation/bridge/: __init__.py  heartbeat.py  interface.py  mock_bridge.py  protocol.py  serial_bridge.py
deskstation-daemon/src/deskstation/clients/: bitbucket.py  gcal.py  gchat.py  gmail.py  jira.py  openmeteo.py
deskstation-daemon/src/deskstation/engines/: pomodoro.py  reminders.py  screen2_merger.py  standup.py
deskstation-daemon/src/deskstation/executors/: macros.py
deskstation-daemon/src/deskstation/listeners/: __init__.py  dbus_notifications.py  screensaver.py  todo_file.py
deskstation-daemon/src/deskstation/pollers/: _time.py  bitbucket.py  calendar.py  claude_usage.py  clock.py  gchat.py  gmail.py  jira.py  mock.py  weather.py
deskstation-daemon/src/deskstation/store/: api_cache.py  pomodoro_store.py  todo_store.py
deskstation-daemon/tests/: conftest.py  test_api_cache.py  test_auth_google.py  test_bitbucket_client.py  test_bitbucket_poller.py  test_calendar_poller.py  test_claude_usage_poller.py  test_clock_poller.py  test_dbus_notifications.py  test_dispatch_actions.py  test_gcal_client.py  test_gchat_client.py  test_gchat_poller.py  test_gmail_client.py  test_gmail_poller.py  test_heartbeat.py  test_integration_m4.py  test_integration_m5.py  test_integration_m6.py  test_jira_client.py  test_jira_poller.py  test_macro_executor.py  test_mock_bridge.py  test_mock_pollers.py  test_openmeteo_client.py  test_pomodoro_engine.py  test_pomodoro_store.py  test_protocol.py  test_reminders_engine.py  test_screen2_merger.py  test_screensaver_listener.py  test_secrets.py  test_serial_bridge.py  test_standup_engine.py  test_todo_listener.py  test_todo_store.py  test_ui_state.py  test_weather_poller.py
deskstation-firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
deskstation-firmware/docs/designs/: 00-all-screens.html  03-screen-3-dev.html
deskstation-firmware/docs/spec/: 02-serial-protocol.md
deskstation-firmware/main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c  protocol.c  protocol.h  ui_state.c  ui_state.h  usb_cdc.c  usb_cdc.h
deskstation-firmware/main/ui/: carousel.c  carousel.h  dots.c  dots.h  fullscreen_overlay.c  fullscreen_overlay.h  lock_overlay.c  lock_overlay.h  macro_overlay.c  macro_overlay.h  pomodoro_overlay.c  pomodoro_overlay.h  screen_1.c  screen_1.h  screen_2.c  screen_2.h  screen_3.c  screen_3.h  screen_4.c  screen_4.h  theme.c  theme.h  toast.c  toast.h  top_bar.c  top_bar.h  ui.c  ui.h
deskstation-firmware/main/ui/fonts/: lv_font_pl_14.c  lv_font_pl_16.c  lv_font_pl_20.c  lv_font_pl_28.c
deskstation-firmware/tools/: flash.sh  install_esp_idf.sh
deskstation-firmware/tools/fonts/: gen.sh
docs/: README.md  hardware-handoff-2026-05-21.md  verification-after-m5.md
docs/designs/: 01-screen-1-jira.html  04-screen-4-todo.html  06-overlay-break.html  07-overlay-macros.html  README.md  styles.css
docs/spec/: 03-project-structure.md
docs/superpowers/plans/: 2026-05-18-m0-m1-bootstrap-and-transport.md  2026-05-18-m2-ui-layer.md  (+2 more)
(+1 files in other folders)
