idf_component_register(
    SRCS
        "main.c"
        "board.c"
        "usb_cdc.c"
        "protocol.c"
        "ui_state.c"
        "ui/carousel.c"
        "ui/dots.c"
        "ui/fullscreen_overlay.c"
        "ui/lock_overlay.c"
        "ui/macro_overlay.c"
        "ui/pomodoro_overlay.c"
        "ui/screen_1.c"
        "ui/screen_2.c"
        "ui/screen_3.c"
        "ui/screen_4.c"
        "ui/theme.c"
        "ui/toast.c"
        "ui/top_bar.c"
        "ui/ui.c"
        "ui/fonts/lv_font_pl_14.c"
        "ui/fonts/lv_font_pl_16.c"
        "ui/fonts/lv_font_pl_20.c"
        "ui/fonts/lv_font_pl_28.c"
    INCLUDE_DIRS
        "."
        "ui"
    REQUIRES
        json
        esp_lcd
        esp_lcd_touch_gt911
        esp_tinyusb
        lvgl
        driver
        nvs_flash
)
